fixed issue for bootstrap style

--- a/angular.json
+++ b/angular.json
@@ -122,9 +122,13 @@
 							"projects/mfe1/src/assets"
 						],
 						"styles": [
+							"./node_modules/bootstrap/dist/css/bootstrap.min.css",
+							"./node_modules/font-awesome/css/font-awesome.css",
 							"projects/mfe1/src/styles.scss"
 						],
-						"scripts": [],
+						"scripts": [
+							"./node_modules/bootstrap/dist/js/bootstrap.min.js"
+						],
 						"extraWebpackConfig": "projects/mfe1/webpack.config.js",
 						"commonChunk": false
 					},
