--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
     "add": "^2.0.6",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "font-awesome": "^4.7.0",
     "rxjs": "~7.5.0",
